--- a/MeilensteinZwei_ANDERS/.project
+++ b/MeilensteinZwei_ANDERS/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>MeilensteinZwei_ANDERS</name>
+	<name>MeilensteinZwei</name>
 	<comment></comment>
 	<projects>
 	</projects>
